--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,28 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "kr.co.notiplus"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 24
+        versionName "1.2.4"
         multiDexEnabled true
+
+        addManifestPlaceholders([APP_NAME: "@string/app_name"])
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def outputFile = output.outputFile
+            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                outputFileName = "sample_${new Date().format('yy_MMdd_HHmm')}_${variant.versionName}.apk"
+            }
         }
     }
 }
