--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="${APP_NAME}"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -23,21 +23,22 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CustomSwitchActivity">
-        </activity>
+        <activity android:name=".CustomSwitchActivity" />
 
-        <activity android:name=".CustomIntroPopupActivity">
-        </activity>
+        <activity android:name=".CustomIntroPopupActivity" />
 
         <!-- 노티플러스 사용을 위해 꼭 추가해주세요 -->
         <activity
             android:name="kr.co.notiplus.lib.activity.NotiplusWebviewActivity"
             android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
+            android:hardwareAccelerated="true"
             android:label="@string/lib_name_notiplus"
             android:launchMode="singleInstance"
             android:taskAffinity="kr.co.notiplus.lib.activity.NotiplusWebviewActivity"
             android:theme="@style/NotiplusTheme.Translucent" />
-        <service android:name="kr.co.notiplus.lib.NotiplusService" />
+        <service
+            android:name="kr.co.notiplus.lib.NotiplusService"
+            android:process=":remote" />
         <receiver android:name="kr.co.notiplus.lib.NotiplusServiceManager">
             <intent-filter>
                 <action android:name="kr.co.notiplus.ACTION_NOTIPLUS_ATTACH" />
