--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "kr.co.notiplus"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 24
-        versionName "1.2.4"
+        versionCode 26
+        versionName "1.2.6"
         multiDexEnabled true
 
         addManifestPlaceholders([APP_NAME: "@string/app_name"])
@@ -25,7 +25,7 @@ android {
         variant.outputs.all { output ->
             def outputFile = output.outputFile
             if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                outputFileName = "sample_${new Date().format('yy_MMdd_HHmm')}_${variant.versionName}.apk"
+                outputFileName = "sample_${variant.versionName}.apk"
             }
         }
     }
@@ -34,5 +34,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile project(":Notiplus-1.2.4")
+    compile project(":Notiplus-1.2.6")
 }
